# slam_decomposition

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  bar_chart.ipynb  chao_checkDeath.py  circuit_template.py  config.py  custom_gates.py  example.ipynb  notes.txt  nuop.ipynb  nuop_script.py  optimizer_test.ipynb  pyproject.toml  qutip_exp.ipynb  requirements-[old].txt  requirements.txt  setup.cfg  setup.py  snail_death.ipynb  test.ipynb  weyl.nb  weyl_exp.ipynb  weyl_scatter.ipynb  weyl_walk.ipynb
.github/: template_flag.yml
data/: Q1_11.07mA_snailPump_length0.5_prepareE_False_freqG_9070_freqC_695-11_processed.json  cg_gates.h5  gain_data.h5  smush_unitary.h5  snail_death.h5  weyl_spanning_1-2-[2].pkl  weyl_spanning_1-2-[3].pkl  weyl_spanning_1-2.pkl  weyl_spanning_1-3-[2].pkl  weyl_spanning_1-3-[3].pkl  weyl_spanning_1-3-[4].pkl  weyl_spanning_1-3-[5].pkl  weyl_spanning_1-4-[2].pkl  weyl_spanning_1-4-[3].pkl  weyl_spanning_1-4-[4].pkl  weyl_spanning_1-4-[5].pkl  weyl_spanning_1-4-[6].pkl  weyl_spanning_1-5-[2].pkl  weyl_spanning_1-5-[3].pkl  weyl_spanning_strange_2.pkl  weyl_spanning_syc_2.pkl  weyl_spanning_syc_3.pkl  weyl_spanning_syc_4.pkl
data_11/: weyl_spanning_1-2-[2].pkl  weyl_spanning_1-2-[3].pkl  weyl_spanning_1-3-[2].pkl  weyl_spanning_1-3-[3].pkl  weyl_spanning_1-3-[4].pkl  weyl_spanning_1-3-[5].pkl  weyl_spanning_1-4-[2].pkl  weyl_spanning_1-4-[3].pkl  weyl_spanning_1-4-[4].pkl  weyl_spanning_1-4-[5].pkl  weyl_spanning_1-4-[6].pkl  weyl_spanning_1-5-[2].pkl  weyl_spanning_1-5-[3].pkl  weyl_spanning_1-5-[4].pkl  (+5 more)
(+537 files in other folders)
