[metadata]
name = slam
description = Parallel Driving for Fast Quantum Computing Under Speed Limits
version = 0.1.0
author = Evan McKinney
# author_email =

[options]
python_requires = >=3.9
install_requires =
    numpy
    qiskit
    qutip
    weylchamber
    matplotlib
    SciencePlots
    tqdm

[options.extras_require]
dev =
    ipykernel
    pre-commit
    pylatexenc
format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
